--- a/index.html
+++ b/index.html
@@ -3,44 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cake Shop</title>
+    <title>My Cool Scratch Card Store</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Satoshi:wght@300;400;700&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Satoshi', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background: url('daiy milk.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fff;
         }
+
         header {
-            background-color: #ffcc00;
+            background: linear-gradient(45deg, #6a1b9a, #8e24aa);
             padding: 20px;
             text-align: center;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+            border-bottom: 4px solid #ff4500;
         }
+
         h1 {
-            color: #ffffff;
+            color: #ffeb3b;
             margin: 0;
+            font-size: 3.5em;
+            font-weight: bold;
+            text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
+            transform: perspective(600px) rotateX(10deg);
         }
+
         .content {
             padding: 20px;
             text-align: center;
         }
+
+        h2 {
+            font-size: 3em;
+            font-weight: bold;
+            margin-bottom: 20px;
+            color: #ff5722;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+        }
+
         .scratch-card {
-            width: 300px;
-            height: 150px;
-            background-color: #cccccc;
-            border-radius: 8px;
+            width: 360px;
+            height: 220px;
+            background: #2c2c2c;
+            border-radius: 20px;
             margin: 20px auto;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 20px;
-            color: #333;
+            font-size: 1.8em;
+            font-weight: bold;
+            color: #fff;
             cursor: pointer;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+            transform: perspective(1000px) rotateX(12deg) rotateY(-12deg);
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
+        }
+
+        .scratch-card:hover {
+            transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale(1.1);
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.6);
+        }
+
+        .scratch-card:active {
+            transform: perspective(1000px) rotateX(20deg) rotateY(-20deg) scale(0.95);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        #scratch-message {
+            font-weight: bold;
+            color: #fff;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 1.2em;
+            font-weight: bold;
+            color: #ffeb3b;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+        }
+
+        footer a {
+            color: #ff5722;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-
     <header>
         <h1>Welcome to APNA KIRANA STORE!</h1>
     </header>
@@ -48,17 +114,28 @@
     <div class="content">
         <h2>Scratch Card Offers</h2>
         <div class="scratch-card" onclick="revealOffer()">
-            <div id="scratch-message">Scratch to reveal offer!</div>
+            <div id="scratch-message">Scratch to reveal your offer!</div>
         </div>
     </div>
 
+    <footer>
+        <p>Designed with <span style="color: #ff5722;">&#10084;</span> by <a href="#">Piyush Thakur</a></p>
+    </footer>
+
     <script>
         function revealOffer() {
-            const offers = ["20RS DARY MILK", "10RS KITKATE", "30% OFF", "Buy One Get One Free", "45RS DARY MILK FREE", "TRY AGAIN"];
+            const offers = [
+                "TRY AGAIN",
+                "20RS DAIRY MILK",
+                "10RS KITKAT",
+                "30% OFF",
+                "Buy One Get One Free",
+                "45RS DAIRY MILK FREE",
+                "TRY AGAIN"
+            ];
             const randomOffer = offers[Math.floor(Math.random() * offers.length)];
             document.getElementById("scratch-message").innerText = randomOffer;
         }
     </script>
-
 </body>
 </html>
