--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Cool Scratch Card Store</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Satoshi:wght@300;400;700&display=swap');
-
         body {
-            font-family: 'Satoshi', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: url('daiy milk.jpg') no-repeat center center fixed;
@@ -18,7 +16,7 @@
 
         header {
             background: linear-gradient(45deg, #6a1b9a, #8e24aa);
-            padding: 20px;
+            padding: 10px;
             text-align: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
             border-bottom: 4px solid #ff4500;
@@ -27,57 +25,55 @@
         h1 {
             color: #ffeb3b;
             margin: 0;
-            font-size: 3.5em;
+            font-size: 2em;
             font-weight: bold;
-            text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
-            transform: perspective(600px) rotateX(10deg);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
 
         .content {
-            padding: 20px;
+            padding: 10px;
             text-align: center;
         }
 
         h2 {
-            font-size: 3em;
+            font-size: 1.8em;
             font-weight: bold;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             color: #ff5722;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .scratch-card {
-            width: 360px;
-            height: 220px;
+            width: 280px;
+            height: 160px;
             background: #2c2c2c;
-            border-radius: 20px;
-            margin: 20px auto;
+            border-radius: 15px;
+            margin: 15px auto;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 1.8em;
+            font-size: 1.2em;
             font-weight: bold;
             color: #fff;
             cursor: pointer;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-            transform: perspective(1000px) rotateX(12deg) rotateY(-12deg);
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .scratch-card:hover {
-            transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale(1.1);
-            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.6);
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
         }
 
         .scratch-card:active {
-            transform: perspective(1000px) rotateX(20deg) rotateY(-20deg) scale(0.95);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            transform: scale(0.95);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         #scratch-message {
             font-weight: bold;
             color: #fff;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             animation: fadeIn 1s ease-in-out;
         }
 
@@ -87,12 +83,12 @@
         }
 
         footer {
-            margin-top: 20px;
+            margin-top: 15px;
             text-align: center;
-            font-size: 1.2em;
+            font-size: 0.9em;
             font-weight: bold;
             color: #ffeb3b;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         footer a {
@@ -103,6 +99,26 @@
 
         footer a:hover {
             text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.5em;
+            }
+
+            h2 {
+                font-size: 1.5em;
+            }
+
+            .scratch-card {
+                width: 220px;
+                height: 140px;
+                font-size: 1em;
+            }
+
+            footer {
+                font-size: 0.8em;
+            }
         }
     </style>
 </head>
@@ -125,7 +141,7 @@
     <script>
         function revealOffer() {
             const offers = [
-                "TRY AGAIN",
+             "TRY AGAIN",
                 "20RS DAIRY MILK",
                 "10RS KITKAT",
                 "30% OFF",
@@ -139,3 +155,4 @@
     </script>
 </body>
 </html>
+
