--- a/index.html
+++ b/index.html
@@ -143,9 +143,12 @@
             const offers = [
              "TRY AGAIN",
                 "20RS DAIRY MILK",
+                 "TRY AGAIN",
                 "10RS KITKAT",
                 "30% OFF",
+                "TRY AGAIN",
                 "Buy One Get One Free",
+                 "TRY AGAIN",
                 "45RS DAIRY MILK FREE",
                 "TRY AGAIN"
             ];
