--- a/index.html
+++ b/index.html
@@ -84,11 +84,17 @@
 
         footer {
             margin-top: 15px;
+            padding: 15px;
             text-align: center;
             font-size: 0.9em;
+            background-color: #2c2c2c;
+            color: #fff;
             font-weight: bold;
-            color: #ffeb3b;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+            border-top: 2px solid #ff4500;
+        }
+
+        footer p {
+            margin: 5px 0;
         }
 
         footer a {
@@ -135,20 +141,21 @@
     </div>
 
     <footer>
-        <p>Designed with <span style="color: #ff5722;">&#10084;</span> by <a href="#">Piyush Thakur</a></p>
+        <p>Contact us at: <a href="mailto:contact@apnakirana.com">contact@apnakirana.com</a></p>
+        <p>Designed and Coded by <a href="#">Piyush Thakur</a></p>
     </footer>
 
     <script>
         function revealOffer() {
             const offers = [
-             "TRY AGAIN",
+                "TRY AGAIN",
                 "20RS DAIRY MILK",
-                 "TRY AGAIN",
+                "TRY AGAIN",
                 "10RS KITKAT",
                 "30% OFF",
                 "TRY AGAIN",
                 "Buy One Get One Free",
-                 "TRY AGAIN",
+                "TRY AGAIN",
                 "45RS DAIRY MILK FREE",
                 "TRY AGAIN"
             ];
@@ -158,4 +165,3 @@
     </script>
 </body>
 </html>
-
