--- a/index.html
+++ b/index.html
@@ -84,17 +84,11 @@
 
         footer {
             margin-top: 15px;
-            padding: 15px;
             text-align: center;
             font-size: 0.9em;
-            background-color: #2c2c2c;
-            color: #fff;
             font-weight: bold;
-            border-top: 2px solid #ff4500;
-        }
-
-        footer p {
-            margin: 5px 0;
+            color: #ffeb3b;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         footer a {
@@ -141,21 +135,20 @@
     </div>
 
     <footer>
-        <p>Contact us at: <a href="mailto:contact@apnakirana.com">contact@apnakirana.com</a></p>
-        <p>Designed and Coded by <a href="#">Piyush Thakur</a></p>
+        <p>Designed with <span style="color: #ff5722;">&#10084;</span> by <a href="#">Piyush Thakur</a></p>
     </footer>
 
     <script>
         function revealOffer() {
             const offers = [
-                "TRY AGAIN",
+             "TRY AGAIN",
                 "20RS DAIRY MILK",
-                "TRY AGAIN",
+                 "TRY AGAIN",
                 "10RS KITKAT",
                 "30% OFF",
                 "TRY AGAIN",
                 "Buy One Get One Free",
-                "TRY AGAIN",
+                 "TRY AGAIN",
                 "45RS DAIRY MILK FREE",
                 "TRY AGAIN"
             ];
